remove unused function

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,10 @@ set -g prefix C-Space
 unbind C-b
 bind-key C-Space send-prefix
 
+# Set windows and panes to start at index 1
+set -g base-index 1
+setw -g pane-base-index 1
+
 # change window splitting
 unbind %
 bind | split-window -h
