--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,6 @@
-set -g default-terminal "screen-256color"
+# Make tmux colors nice
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
 
 # Make escape mode fast in neovim
 set -sg escape-time 0
@@ -74,17 +76,17 @@ unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode after dragging m
 set -g @plugin 'tmux-plugins/tpm'
 
 # tmux plugins
-set -g @plugin 'jimeh/tmux-themepack' # configure themes
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux after restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # autosave tmux sessions
-
-set -g @themepack 'powerline/double/blue'
 
 set -g @resurrect-capture-pange-contents 'on' # allow tmux-ressurect to capture pane content
 set -g @continuum-restore 'on' # enable tmux-continuum
 
 # Fuzzy search sessions
 set -g @plugin 'sainnhe/tmux-fzf'
+set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_date_time "%Y-%m-%d %H:%M"
+
 
 
 # Initialize TMUX pluging manage (keep at bottom)
