add cargo config, modified tmux and zsh for tmux-time-tracker

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,12 +14,18 @@ bind-key C-Space send-prefix
 set -g base-index 1
 setw -g pane-base-index 1
 
-# change window splitting
+# change window splitting shortcuts
 unbind %
-bind | split-window -h
-
 unbind '"'
-bind - split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+
+# Client attached - fill in started_at
+# Client detached - remove started_at, add a time log for that session
+# Client switched to session - remove started_at, add a time log for that session, fill started_at for new session
+set-hook -g client-attached 'run-shell "output=$(tmux-time-tracker geth #{session_name}); tmux-time-tracker attach #{session_name}; tmux display-message \"Total time: \$output\""'
+set-hook -g client-detached 'run-shell "tmux-time-tracker detach"'
+set-hook client-session-changed 'run-shell "tmux-time-tracker detach; tmux-time-tracker attach #{session_name}; output=$(tmux-time-tracker geth #{session_name}); tmux display-message \"Total time: \$output\""'
 
 # Easy tmux refresh
 unbind r
@@ -35,11 +41,8 @@ bind -r h resize-pane -L 5
 unbind s
 bind s run-shell -b "~/.tmux/plugins/tmux-fzf/scripts/session.sh switch"
 
-
-
 # Maximize minimize panes
 bind -r m resize-pane -Z
-
 
 # Enable mouse mode
 set -g mouse on
@@ -72,24 +75,24 @@ bind-key -T copy-mode-vi 'C-\' select-pane -l
 
 unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode after dragging mouse
 
-# tpm plugin
+# Tmux Plugin Manager
 set -g @plugin 'tmux-plugins/tpm'
 
-# tmux plugins
+# tmux plugins for restoric sessions
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux after restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # autosave tmux sessions
-
 set -g @resurrect-capture-pange-contents 'on' # allow tmux-ressurect to capture pane content
 set -g @continuum-restore 'on' # enable tmux-continuum
 
 # Fuzzy search sessions
 set -g @plugin 'sainnhe/tmux-fzf'
+
+# Catpuccin theme
 set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_date_time "%Y-%m-%d %H:%M"
-
-
+set -g @catppuccin_window_tabs_enabled on # or off to disable window_tabs
 
 # Initialize TMUX pluging manage (keep at bottom)
 run '~/.tmux/plugins/tpm/tpm'
 
-run-shell "echo 'tmux config loaded'"
+display-message 'tmux config reloaded'
