new hooks for tmux-time-tracker

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,9 +23,9 @@ bind - split-window -v -c "#{pane_current_path}"
 # Client attached - fill in started_at
 # Client detached - remove started_at, add a time log for that session
 # Client switched to session - remove started_at, add a time log for that session, fill started_at for new session
-set-hook -g client-attached 'run-shell "output=$(tmux-time-tracker geth #{session_name}); tmux-time-tracker attach #{session_name}; tmux display-message \"Total time: \$output\""'
-set-hook -g client-detached 'run-shell "tmux-time-tracker detach"'
-set-hook client-session-changed 'run-shell "tmux-time-tracker detach; tmux-time-tracker attach #{session_name}; output=$(tmux-time-tracker geth #{session_name}); tmux display-message \"Total time: \$output\""'
+set-hook -g client-attached 'run-shell "tmux-time-tracker attached #{session_name}"'
+set-hook -g client-detached 'run-shell "tmux-time-tracker detached #{session_name}"'
+set-hook client-session-changed 'run-shell "tmux-time-tracker changed #{session_name}"'
 
 # Easy tmux refresh
 unbind r
