set the proper hook for tmux-time-tracker

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,7 +25,7 @@ bind - split-window -v -c "#{pane_current_path}"
 # Client switched to session - remove started_at, add a time log for that session, fill started_at for new session
 set-hook -g client-attached 'run-shell "tmux-time-tracker attached #{session_name}"'
 set-hook -g client-detached 'run-shell "tmux-time-tracker detached #{session_name}"'
-set-hook client-session-changed 'run-shell "tmux-time-tracker changed #{session_name}"'
+set-hook -g client-session-changed 'run-shell "tmux-time-tracker changed #{session_name}"'
 
 # Easy tmux refresh
 unbind r
