--- a/.tmux.conf
+++ b/.tmux.conf
@@ -78,12 +78,6 @@ unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode after dragging m
 # Tmux Plugin Manager
 set -g @plugin 'tmux-plugins/tpm'
 
-# tmux plugins for restoric sessions
-set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux after restart
-set -g @plugin 'tmux-plugins/tmux-continuum' # autosave tmux sessions
-set -g @resurrect-capture-pange-contents 'on' # allow tmux-ressurect to capture pane content
-set -g @continuum-restore 'on' # enable tmux-continuum
-
 # Fuzzy search sessions
 set -g @plugin 'sainnhe/tmux-fzf'
 
@@ -91,6 +85,13 @@ set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_date_time "%Y-%m-%d %H:%M"
 set -g @catppuccin_window_tabs_enabled on # or off to disable window_tabs
+
+# NOTE these must be last for autosave feature to work properly
+# tmux plugins for restoric sessions
+set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux after restart
+set -g @plugin 'tmux-plugins/tmux-continuum' # autosave tmux sessions
+set -g @resurrect-capture-pange-contents 'on' # allow tmux-ressurect to capture pane content
+set -g @continuum-restore 'on' # enable tmux-continuum
 
 # Initialize TMUX pluging manage (keep at bottom)
 run '~/.tmux/plugins/tpm/tpm'
