--- a/.tmux.conf
+++ b/.tmux.conf
@@ -83,7 +83,9 @@ set -g @plugin 'sainnhe/tmux-fzf'
 
 # Catpuccin theme
 set -g @plugin 'catppuccin/tmux'
-set -g @catppuccin_date_time "%Y-%m-%d %H:%M"
+set -g @catppuccin_flavour 'mocha'
+set -g @catppuccin_window_default_text "#{b:pane_current_path}"
+set -g @catppuccin_date_time "%Y-%m-%d %H:%M %H:%M"
 set -g @catppuccin_window_tabs_enabled on # or off to disable window_tabs
 
 # NOTE these must be last for autosave feature to work properly
